--- a/app/scss/_base.scss
+++ b/app/scss/_base.scss
@@ -381,8 +381,8 @@ span.line {
   right:1rem;
   top:1rem;
   z-index:11;
-  width:3.5rem;
-  height:3.2rem;
+  width:60px;
+  height:54px;
   background-color:rgba(15,22,38,0.05);
   cursor:pointer;
   overflow:hidden;
@@ -403,32 +403,40 @@ span.line {
     transform:translateX(-120%);
     transition:transform 0.2s ease-out;
   }
-  &:hover:after{
-    transform:translateX(0);
+
+  @media (hover: hover) {  //this means it will only occur on hover and not touch
+    &:hover:after{transform:translateX(0);}
+    &:hover .menustrips>div{background-color:$darkblue;}
   }
 }
 
+.project.br .menu_icon_container:after{background-color:#fff;}
+.project.yukfoo .menu_icon_container:after{background-color:#fff;}
 
 
 
 .menu_icon{
   position:relative;
-  width:3.5rem;
-  height:3.2rem;
+  width:60px;
+  height:54px;
   float:left;
+}
 
+.menu_icon.close-icon{
+  .topstrip{background-color:$darkblue;transform:rotate(-45deg) translate(-7px,6px);}
+  .midstrip{opacity:0;}
+  .bottomstrip{background-color:$darkblue; transform:rotate(45deg) translate(-7px,-5px);}
 }
 
 .menustrips{
     position:absolute;
-    left:50%;
-    top:50%;
-    transform:translate(-50%,-50%);
+    margin:16px;
     &>div{
       width:30px;
-      margin-top:5px;
+      margin-top:6px;
       height:3px;
       background-color:#fff;
+      transition:background-color 0.5s ease-out,transform 0.3s ease-out;
        &:first-child{
         margin-top:0;
       }
@@ -444,7 +452,7 @@ span.line {
 
 
 .menu_overlay{
-  background-color:rgba(255,255,255,0.97);
+  background-color:rgba(245,245,245,0.97);
   position:fixed;
   top:0;
   right:0;
@@ -460,57 +468,57 @@ span.line {
   .menu_content_container{
     position:absolute;
     top:45%;
-    left:50%;
-    transform:translate(-50%,-50%);
+    transform:translateY(-50%);
   }
+
+  .menu_title,
+  .menu_project_heading a,
+  .menu_projects a{
+    @include fluid-type(padding, 20rem, 100rem, 1rem, 0.5rem);
+    @include fluid-type(margin-left, 20rem, 100rem, -1rem, -1rem);
+    @include hover-effect(); //&:hover:after
+    overflow:hidden;
+    line-height:1;
+    position:relative;
+    display:inline-block;
+
+  }
+
+
+
 
 
   .menu_title{
-      position:relative;
       font-family: 'Helvetica Neue Bold';
-      @include fluid-type(font-size, 20rem, 100rem, 2.369rem, 2.369rem);
-      @include fluid-type(padding, 20rem, 100rem, 1rem, 1rem);
-      display:block;
-      overflow:hidden;
-      line-height:1;
-      @include hover-effect(); //&:hover:after
+      @include fluid-type(font-size, 20rem, 100rem, 2.369rem, 2.369rem);   
   }
 
   .menu_project_heading{
-    font-family: 'Proxima Nova semiBold';
-    @include fluid-type(font-size, 20rem, 100rem, 1rem, 0.75rem);
-    letter-spacing:2px;
     display:block;
-    @include fluid-type(margin-top margin-bottom, 20rem, 100rem, 1rem, 1rem);
-    @include fluid-type(padding, 20rem, 100rem, 1rem, 1rem);
-    position:relative;
-    display:inline-block;
-    overflow:hidden;
-    @include hover-effect(); //&:hover:after
-  }
 
-  .menu_projects{
-    
+    a{
+      font-family: 'Proxima Nova semiBold';
+      @include fluid-type(margin-top margin-bottom, 20rem, 100rem, 1rem, 0.5rem); 
+      @include fluid-type(font-size, 20rem, 100rem, 1rem, 0.75rem);
+      letter-spacing:2px;
+     
+    }
   }
 
   .menu_projects a{
     font-family: 'Proxima Nova bold';
-    position:relative;
     letter-spacing:1px;
-     @include fluid-type(font-size, 20rem, 100rem, 1.333rem, 0.75rem);
-     text-transform:uppercase;
-    display:inline-block;
-    line-height:1;
-    @include fluid-type(margin-bottom, 20rem, 100rem, 0.5rem,0.5rem);
-    @include fluid-type(padding, 20rem, 100rem, 1rem, 1rem);
-    overflow:hidden;
-    @include hover-effect(); //&:hover:after
+    @include fluid-type(font-size, 20rem, 100rem, 1.333rem, 1rem);
+    text-transform:uppercase;
+    @include fluid-type(margin-bottom, 20rem, 100rem, 0.25rem,0.5rem);
+    
   }
 
   .menu_social{
     @include fluid-type(padding-top, 20rem, 100rem, 1rem, 1rem);
-     @include fluid-type(margin-top, 20rem, 100rem, 1rem, 1rem);
-    border-top:1px solid $darkblue;
+    @include fluid-type(margin-top, 20rem, 100rem, 1rem, 1rem);
+    @include fluid-type(margin-left, 20rem, 100rem, -1rem, -1rem);
+    // border-top:1px solid $darkblue;
     li{
       display:inline-block;
       padding:1rem;
@@ -518,8 +526,6 @@ span.line {
       overflow:hidden;
       @include hover-effect(); //&:hover:after
     }
-    
-    
     a{
       position:relative;
       display:inline-block;
@@ -542,12 +548,13 @@ span.line {
 
 .home_logo{
       @include fluid-type(font-size, 20rem, 100rem, 1.333rem, 1.5rem);
-      @include fluid-type(padding-top, 20rem, 100rem, 1rem, 2rem);
+      @include fluid-type(padding-top, 20rem, 100rem, 2rem, 2rem);
       letter-spacing:0.5px;
       font-family: 'Helvetica Neue Bold';
       float:left;
       color:#fff;
-      position:relative;
+      position:absolute;
+      left:2rem;
       &:hover{
 
       }
@@ -832,15 +839,17 @@ section.projects{
 
 
   a{
-    background-color:$yellow;
+    position:relative;
     border:1px solid transparent;
     cursor:pointer;
     display: inline-block;
     vertical-align:middle;
     transition: all 0.5s ease-out;
+    overflow:hidden;
     padding:1rem;
     width:4rem;
     height:4rem;
+    background-color:$yellow;
     @include fluid-type(margin-left margin-right, 20em, 70em, 0.25em, 0.5em);
     
       svg{
