Made the project names fixed when the user scrolls on the project page

--- a/app/scss/_base.scss
+++ b/app/scss/_base.scss
@@ -802,6 +802,11 @@ section.projects{
     }
     @include bp(mamabear){
       width:30%;
+      visibility:hidden;
+      position:fixed;
+      &.skrollable-between{
+        visibility:initial;
+      }
     }
     
     @include bp(papabear){
