--- a/app/scss/_base.scss
+++ b/app/scss/_base.scss
@@ -762,7 +762,7 @@ section.projects{
   //   background-color:transparent;
   // }
 
-  div.prev_proj_container:first-child{margin-top:0;}
+  // div.prev_proj_container:first-child{padding-top:0;}
 
   .prev_proj_container{
     position:relative;
@@ -770,7 +770,7 @@ section.projects{
     float:left;
     width:100%;
     @include bp(babybear){
-      @include fluid-type(margin-bottom margin-top, 20em, 70em, 4rem, 6rem);
+      @include fluid-type(padding-bottom padding-top, 20em, 70em, 4rem, 6rem);
     }
 
 
@@ -790,6 +790,7 @@ section.projects{
       display:inline-block;
     }
     p{
+      @include fluid-type(font-size, 20em, 70em, 1rem, 1rem);
       @include fluid-type(padding-top, 20em, 70em, 0.5rem, 1.5rem);
       @include fluid-type(padding-bottom, 20em, 70em, 2rem, 2rem);
     }
@@ -801,24 +802,27 @@ section.projects{
     @include bp(babybear){
       position:absolute;
       top:50%;
-      transform:translateY(-50%);
+      transform:translate(0, -50%);
       left:6.875%;
-    }
-    @include bp(babybear){
       width:41.408%;
-    }
-    @include bp(mamabear){
-      width:30%;
       position:fixed;
       visibility: hidden;
+      opacity:0;
+      transition:all 0.2s ease-out;
       // opacity: 0;
       // transition: visibility 0s linear 200ms, opacity 200ms;
 
       &.skrollable-between{
         visibility: visible;
+        opacity:1;
+        transition:opacity 0.2s ease-out;
         // opacity: 1;
         // transition: visibility 0s ease-out 0s, opacity 200ms;
       }
+    }
+    @include bp(mamabear){
+      width:30%;
+      
     }
     
     @include bp(papabear){
