--- a/app/scss/_base.scss
+++ b/app/scss/_base.scss
@@ -699,44 +699,6 @@ section.opening{
     }
   }
 
-  // .scroll_down{
-  //     @include fluid-type(margin-bottom, 20rem, 100rem, 1.777rem, 1.777rem);
-  //     opacity:0.8;
-  //     padding:5px;
-  //     color:#fff;
-  //     position:absolute;
-  //     z-index:2;
-  //     left:50%;
-  //     transform:translateX(-50%);
-  //     bottom:0;
-  //     border:1px solid #fff;
-  //     width:50px;
-  //     height:50px;
-  //     display: inline-block;
-  //     text-align: center;
-  //     border-radius:2px;
-  //     @include bp(babybear){
-  //       opacity:0.8;
-  //       width:46px;
-  //       height:46px;
-  //     }
-  //   &:before{
-  //     font-family: 'fontastic';
-  //     @include fluid-type(font-size, 20rem, 100rem, 1rem, 0.844rem);
-  //     content: "\63"; 
-  //     display: inline-block;
-  //     vertical-align:bottom;
-  //     position:absolute;
-  //     left:0;
-  //     right:0;
-  //     top:50%;
-  //     transform:translateY(-50%);
-  //   }
-  //   &:hover{
-  //     opacity:1;
-  //   }
-  // }
-
 }
 
 
@@ -744,145 +706,74 @@ section.projects{
   position:relative;
   z-index:1;
   @include clearfix();
-    width:93.5vw;
-    margin:0 3.125vw;
-
-  .prev_proj_container{
-    position:relative;
-    clear:both;
-    float:left;
-    width:100%;
-    @include bp(babybear){
-      @include fluid-type(padding-bottom padding-top, 20em, 70em, 4rem, 6rem);
-    }
+  width:93.5vw;
+  margin:0 3.125vw;
 
 
-    .title{
-      font-family: 'Helvetica Neue Bold';
-      @include fluid-type(font-size, 20rem, 100rem, 1.333rem, 2.369rem);
-      @include fluid-type(padding-bottom, 20em, 70em, 1rem, 1.5rem);
-      padding-top:0;  
-      display:inline-block;
-      @include bp(babybear){
-        display:block;
-      }
-    }
-
-    .year{
-      @include fluid-type(font-size, 20rem, 100rem, 1rem, 1rem);
-      display:inline-block;
-    }
-    p{
-      @include fluid-type(font-size, 20em, 70em, 1rem, 1rem);
-      @include fluid-type(padding-top, 20em, 70em, 0.5rem, 1.5rem);
-      @include fluid-type(padding-bottom, 20em, 70em, 2rem, 2rem);
-    }
-
-    
-  }
-
-  .prev_textblock{
-    @include bp(babybear){
-      position:absolute;
-      top:50%;
-      transform:translate(0, -50%);
-      left:6.875%;
-      width:41.408%;
-      position:fixed;
-      visibility: hidden;
+  .project:hover{
+    .overlay{
       opacity:0;
-      // transition:all 0.2s ease-out;
-      // opacity: 0;
-      // transition: visibility 0s linear 200ms, opacity 200ms;
-
-      &.skrollable-between{
-        visibility: visible;
-        opacity:1;
-        // transition:opacity 0.2s ease-out;
-        // opacity: 1;
-        // transition: visibility 0s ease-out 0s, opacity 200ms;
-      }
     }
-    @include bp(mamabear){
-      width:30%;
-      
+    .logo_prev{
+      transform:translate(-50%,-50%) scale(1.05,1.05);
+      transform-origin: center center;
     }
-    
-    @include bp(papabear){
-      left:22%;
-      width:31.798%;
-    }
-
-    
   }
 
-  .kaha .prev_textblock{
-      transform:translate(0%, 0%);
+  .project:active{
+    .overlay{background-color:$yellow;}
 
-      &.skrollable-between{
-        transform:translate(0%, -50%);
-        transition:all 0.5s ease-out;
-      }
   }
+
+
+
+
+
 
 
 
 
 
   .project{
-    width:100%;
-    padding-top:61.805%;
-     height:0;
-    float:left;
-    position:relative;
-    background-size:100%;
-    overflow:hidden;
-    max-width:640px;
-    transition: all 200ms ease-out;
-    &:focus{outline:none;}
+  width:100%;
+  padding-top:61.805%;
+  height:0;
+  float:left;
+  position:relative;
+  background-size:100%;
+  overflow:hidden;
+  max-width:640px;
+  transition: all 200ms ease-out;
 
-    @include bp(babybear){
-        width:44.39%;
-        float:right;
-        height:0;
-        padding-top:27.497%;
-    }
-    @include bp(mamabear){
-        width:54%;
-        padding-top:33.375%;
-    }
+  &:focus{outline:none;}
 
-    @include bp(papabear){
-        width:44.39%;
-        padding-top:27.497%;
-    }
-
-    .backing_prev{
-
-        position:absolute;
-        top:0;
-        bottom:0;
-        right:0;
-        left:0;
-       width:100%;
-        float:left;
-    }
-    
+  @include bp(babybear){
+      width:44.39%;
+      float:right;
+      height:0;
+      padding-top:27.497%;
+  }
+  @include bp(mamabear){
+      width:54%;
+      padding-top:33.375%;
   }
 
-  // .logo_prev{
-  //   position:absolute;
-  //   z-index:2;
-  //   left:50%;
-  //   top:50%;
-  //   transform:translate(-50%,-50%);
-  //   transition: all 400ms ease-out;
-  // }
-  // .kaha .logo_prev{width:5rem;}
-  // .yukfoo .logo_prev{width:7rem;}
-  // .loaf .logo_prev{width:8rem;}
-  // .br .logo_prev{width:6rem;}
-  
+  @include bp(papabear){
+      width:44.39%;
+      padding-top:27.497%;
+  }
+
+
+  .backing_prev{
+    position:absolute;
+    top:0;
+    bottom:0;
+    right:0;
+    left:0;
+    width:100%;
+    float:left;
+  }
+
   .overlay{
     opacity:0;
     position:absolute;
@@ -902,19 +793,113 @@ section.projects{
   .br .overlay{background-color:#2E0A2D;}
   .kaha .overlay{background-color:#004997;}
 
-  .project:hover{
-    .overlay{
-      opacity:0;
+}
+}
+
+
+
+
+
+
+
+.prev_proj_container{
+    position:relative;
+    clear:both;
+    float:left;
+    width:100%;
+    @include bp(babybear){
+      @include fluid-type(padding-top, 20em, 70em, 6rem, 15rem);
+      @include fluid-type(padding-bottom, 20em, 70em, 2rem, 5rem);
+    } 
+}
+
+
+.prev_textblock{
+  @include bp(babybear){
+    position:absolute;
+    top:50%;
+    transform:translate(0, -50%);
+    left:6.875%;
+    width:41.408%;
+    position:fixed;
+    visibility: hidden;
+    opacity:0;
+    &.skrollable-between{
+      visibility: visible;
+      opacity:1;
     }
-    .logo_prev{
-      transform:translate(-50%,-50%) scale(1.05,1.05);
-      transform-origin: center center;
+  }
+  @include bp(mamabear){
+    width:30%;
+    
+  }
+  @include bp(papabear){
+    left:22%;
+    width:31.798%;
+  } 
+
+  .title{
+    font-family: 'Helvetica Neue Bold';
+    @include fluid-type(font-size, 20rem, 100rem, 1.5rem, 2.369rem);
+    @include fluid-type(padding-bottom, 20em, 70em, 1rem, 1.5rem);
+    padding-top:0;  
+    display:inline-block;
+    position:relative;
+    @include bp(babybear){
+      display:block;
+    }
+
+    @include bp(babybear){
+      &:after{
+         @include fluid-type(padding-left, 20em, 70em, 0.7rem, 0.7rem);
+         @include fluid-type(font-size, 20rem, 100rem, 1.333rem, 1.777rem);
+         vertical-align:middle;
+        font-family:"fontastic";
+        display:inline-block;
+        content:"\63";
+        transform:translateX(-2rem);
+        opacity:0;
+        transition:all 0.4s ease-out;
+      }
+    } 
+  }
+
+  &.skrollable-between{
+    .title:after{
+      transform:translateX(0);
+      opacity:1;
     }
   }
 
-  .project:active{
-    .overlay{background-color:$yellow;}
+  .year{
+    @include fluid-type(font-size, 20rem, 100rem, 1rem, 1rem);
+    display:inline-block;
+  }
 
+  p{
+    @include fluid-type(font-size, 20em, 70em, 1rem, 1rem);
+    @include fluid-type(padding-top, 20em, 70em, 0.5rem, 1.5rem);
+    @include fluid-type(padding-bottom, 20em, 70em, 2rem, 2rem);
+  }
+}
+
+.prev_textblock:hover .title:after{transform:translateX(1rem);transition:transform 0.2s ease-out;}
+
+.big_blocktext{
+  visibility:hidden;
+  @include bp(babybear){
+    visibility:visible;
+    @include fluid-type(font-size, 20em, 70em, 10rem, 20rem);
+    font-family: 'Helvetica Neue Bold';
+    position:fixed;
+    top:50%;
+    color:#fff;
+    z-index:-1;
+    opacity:0;
+    transition:opacity 0.5s ease-out;
+    &.skrollable-between{
+      opacity:0.8;
+    }
   }
 }
 
